--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -103,6 +103,7 @@ $neutral-900: #1d2021;
   max-width: 2560px;
   padding: 0 1rem;
   width: 100%;
+  box-sizing: border-box;
 }
 
 // Responsive breakpoints
